Add check for search_result_ pointer to prevent browser crash

Fixes browser crash after search result answer card search

Bug: 910388
Change-Id: I7ab881d2cf4da2920439be73da2977a7c436b6af
Reviewed-on: https://chromium-review.googlesource.com/c/1356715
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Commit-Queue: Matthew Mourgos <mmourgos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612954}
Former-commit-id: 59f9c8568ddd6937fe2db1adbd9813354b0f69e4